--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "index.js",
   "scripts": {
     "build": "cd app && npm install && npm run build",
-    "start": "nodemon --watch api --exec node --experimental-modules api/server.js"
+    "start": "nodemon --watch api --exec node --experimental-modules api/server.js",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix app && npm run build --prefix app"
   },
   "repository": {
     "type": "git",
